<resources>
    <string name="app_name">TemplateApp</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forget your password?</u></string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_settings">Settings</string>
</resources>